# Local-LLM-Coding-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  USAGE.md  main.py  pyproject.toml  requirements.txt  run_sentinel.bat  sentinel.bat
agents/: __init__.py  agent_action.py  base_agent.py  coding_agent.py  critic_agent.py  debugging_agent.py  devops_agent.py  pipeline_generator.py  planner.py  reasoning_agent.py  research_agent.py  supervisor.py  system_agent.py
cli/: __init__.py  command_palette.py  diff_viewer.py  display.py  interface.py  pipeline_viewer.py  progress_tracker.py
config/: __init__.py  hardware_profile.py  model_config.py  settings.py
context/: __init__.py  context_builder.py  context_cache.py  context_loader.py  dependency_graph.py  file_loader.py  image_parser.py  pdf_parser.py  project_synopsis.py  rag_search.py  repo_explorer.py  snippet_loader.py  symbol_graph.py  url_fetcher.py
core/: __init__.py  bootstrap.py  categories.py  execution_engine.py  model_router.py  validator.py
execution/: __init__.py  pipeline.py  retry_handler.py  sandbox.py  step_runner.py
learning/: __init__.py  feedback_loop.py  metrics_tracker.py  prompt_optimizer.py
memory/: __init__.py  conversation_memory.py  project_index.py  session_store.py
models/: __init__.py  embedding_client.py  inference_engine.py  model_registry.py  ollama_client.py
system/: __init__.py  dependency_installer.py  hardware_detector.py  ollama_manager.py
tasks/: __init__.py  task_manager.py  (+2 more)
(+15 files in other folders)
